pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/meshexternalservice-with-tls.listeners.golden.yaml
resources:
- name: meshexternalservice_example
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.20.20.1
        portValue: 9090
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          normalizePath: true
          routeConfig:
            name: meshexternalservice_example
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: example
              routes:
              - match:
                  prefix: /
                name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
                route:
                  autoHostRewrite: true
                  cluster: meshexternalservice_example
                  timeout: 0s
          statPrefix: meshexternalservice_example
    metadata:
      filterMetadata:
        io.kuma.tags: {}
    name: meshexternalservice_example
    trafficDirection: OUTBOUND
